--- a/src/assets/sass/components/personal-area/personal-area.scss
+++ b/src/assets/sass/components/personal-area/personal-area.scss
@@ -3,11 +3,22 @@
     margin: 0 auto;
     margin-bottom: 120px;
 
+    @media (max-width: $maxMobWidth) {
+        margin-bottom: 80px;
+    }
+
     &__tabs {
         display: grid;
         align-items: start;
         grid-template-columns: 202px 1fr;
         gap: 158px;
+
+        @media (max-width: $maxMobWidth) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 32px;
+        }
     }
 
     &__pa {
@@ -15,6 +26,14 @@
         align-items: flex-start;
         grid-template-columns: repeat(2, 447px);
         gap: 153px;
+
+        @media (max-width: $maxMobWidth) {
+            display: flex;
+            flex-direction: column;
+            gap: 32px;
+            align-items: center;
+            width: 100%;
+        }
     }
 
     &__data {
@@ -30,12 +49,28 @@
         padding: 12px;
         text-align: center;
     }
+
+    @media (max-width: $maxMobWidth) {
+        .footer__application {
+            display: block;
+            width: 120px;
+        }
+    }
 }
 
 .pa-tabs {
     &__header {
         display: grid;
         gap: 44px;
+
+        @media (max-width: $maxMobWidth) {
+            position: relative;
+            width: 100%;
+            align-items: flex-end;
+            grid-template-columns: 1fr 1fr;
+            gap: 0;
+            padding-bottom: 36px;
+        }
     }
 
     &__title {
@@ -46,9 +81,29 @@
         line-height: 21px;
         text-transform: uppercase;
 
+        @media (max-width: $maxMobWidth) {
+            border-bottom: 1px solid #E9E9E9;
+            padding-bottom: 10px;
+            font-family: 'Montserrat';
+            font-weight: 300;
+            font-size: 12px;
+            line-height: 140%;
+            margin: 0;
+            text-transform: none;
+        }
+
         &--active {
             position: relative;
             margin-bottom: 28px;
+
+            @media (max-width: $maxMobWidth) {
+                margin: 0;
+                padding-bottom: 8px;
+                border-bottom: 4px solid #F08597;
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 17px;
+            }
 
             &::after {
                 position: absolute;
@@ -59,6 +114,26 @@
                 background-color: #FFD9DF;
                 border-radius: 4px;
                 content: "";
+
+                @media (max-width: $maxMobWidth) {
+                    content: none;
+                }
+            }
+        }
+    }
+
+    &__wrapper {
+        &:nth-child(1) {
+            @media (max-width: $maxMobWidth) {
+                order: 2;
+            }
+        }
+
+        &--active {
+            @media (max-width: $maxMobWidth) {
+                .pa-tabs__list {
+                    display: flex;
+                }
             }
         }
     }
@@ -67,6 +142,18 @@
         display: grid;
         gap: 8px;
         padding-left: 16px;
+
+        @media (max-width: $maxMobWidth) {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            display: none;
+            gap: 32px;
+            padding: 0;
+            padding-bottom: 8px;
+            border-bottom: 1px solid #E9E9E9;
+        }
     }
 
     &__item {
@@ -76,9 +163,20 @@
         color: #888888;
         cursor: pointer;
 
+        @media (max-width: $maxMobWidth) {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 160%;
+            color: #878787;
+        }
+
         &--active {
             font-weight: 500;
             color: #000000;
+
+            @media (max-width: $maxMobWidth) {
+                color: #000;
+            }
         }
     }
 
