--- a/src/assets/sass/components/webinar/webinar-useful.scss
+++ b/src/assets/sass/components/webinar/webinar-useful.scss
@@ -13,6 +13,7 @@
 
         @media (max-width: $maxMobWidth) {
             margin-bottom: 24px;
+            text-align: center;
         }
     }
 
