--- a/src/assets/sass/components/category/sorting.scss
+++ b/src/assets/sass/components/category/sorting.scss
@@ -186,6 +186,8 @@
     }
 
     @media (max-width: $maxMobWidth) {
+        flex-grow: 1;
+        margin-left: 8px;
         font-size: 12px;
         line-height: 15px;
     }
