--- a/src/assets/sass/components/personal-area/log-in.scss
+++ b/src/assets/sass/components/personal-area/log-in.scss
@@ -43,7 +43,7 @@
 
         @media (max-width: $maxMobWidth) {
             display: flex;
-            justify-content: space-between;
+            gap: 124px;
             margin-bottom: 34px;
             padding: 0 16px;
         }
@@ -73,7 +73,6 @@
 
         &--active {
             font-weight: 600;
-
             &::after {
                 width: 80px;
                 opacity: 1;
