--- a/src/assets/sass/components/thanks-for-order/order-info.scss
+++ b/src/assets/sass/components/thanks-for-order/order-info.scss
@@ -6,6 +6,10 @@
     @media (max-width: $maxMobWidth) {
         max-width: none;
         margin-bottom: 80px;
+
+        .basket__price {
+            margin-left: -60px;
+        }
     }
 
     &__title {
