--- a/src/assets/sass/components/webinar/webinar-about.scss
+++ b/src/assets/sass/components/webinar/webinar-about.scss
@@ -10,6 +10,10 @@
 
     &__title {
         text-align: left;
+
+        @media (max-width: $maxMobWidth) {
+            text-align: center;
+        }
     }
 
     &__digits {
