Делает правки верстки

--- a/src/assets/sass/components/main-categories.scss
+++ b/src/assets/sass/components/main-categories.scss
@@ -280,6 +280,10 @@
 
             &--reviews {
                 justify-content: flex-start;
+
+                @media (max-width: $maxMobWidth) {
+                    justify-content: center;
+                }
             }
         }
 
