--- a/src/assets/sass/components/reviews/reviews.scss
+++ b/src/assets/sass/components/reviews/reviews.scss
@@ -5,6 +5,10 @@
 
     &__title {
         text-align: left;
+
+        @media (max-width: $maxMobWidth) {
+            text-align: center;
+        }
     }
 
     &__btn {
