--- a/src/assets/sass/components/personal-area/personal-area.scss
+++ b/src/assets/sass/components/personal-area/personal-area.scss
@@ -7,6 +7,20 @@
         margin-bottom: 80px;
     }
 
+    &__title {
+        display: none;
+
+        @media (max-width: $maxMobWidth) {
+            display: block;
+            margin-bottom: 24px;
+            font-family: 'Tenor Sans';
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 150%;
+            text-align: center;
+        }
+    }
+
     &__tabs {
         display: grid;
         align-items: start;
@@ -207,4 +221,3 @@
         color: #321726;
     }
 }
-
