--- a/src/assets/sass/components/training/training.scss
+++ b/src/assets/sass/components/training/training.scss
@@ -166,6 +166,7 @@
         @media (max-width: $maxMobWidth) {
             display: flex;
             flex-direction: column;
+            gap: 8px;
         }
     }
 
